--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,14 +27,18 @@ jobs:
           name: android-app
           path: build/app/outputs/flutter-apk
 
+      - name: Get short SHA
+        id: slug
+        run: echo "::set-output name=sha8::$(git rev-parse --short HEAD)"
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag_name: ${{steps.slug.outputs.sha8}}
+          release_name: Release ${{steps.slug.outputs.sha8}}
           draft: false
           prerelease: false
 
