--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
           flutter-version: '1.22.4'
       - run: flutter pub get
 #      - run: flutter test # Nah
-      - run: flutter build apk
+      - run: flutter build apk  --build-number ${GITHUB_RUN_NUMBER}
       
       - name: Upload Artifacts
         uses: actions/upload-artifact@master
