--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   http: ^0.12.2
   permission_handler: ^5.0.1+1
   flutter_launcher_icons: ^0.8.1
+  open_file: ^3.0.3
+  path_provider: ^1.6.24
 
 dev_dependencies:
   flutter_test:
@@ -52,10 +54,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
