--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
-  background_location: ^0.2.2
+  background_locator: ^1.2.2+1
   uni_links: ^0.4.0
   provider: ^4.3.2
   url_launcher: ^5.7.10
