--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -60,12 +60,10 @@
             android:exported="true"/>
         <service android:name="rekab.app.background_locator.LocatorService"
             android:permission="android.permission.BIND_JOB_SERVICE"
-            android:exported="true"
-            android:stopWithTask="true"/>
+            android:exported="true"/>
         <service android:name="rekab.app.background_locator.IsolateHolderService"
             android:permission="android.permission.FOREGROUND_SERVICE"
-            android:exported="true"
-            android:stopWithTask="true"/>
+            android:exported="true"/>
 
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
